fix: alt text respects whitespace

--- a/src/style.scss
+++ b/src/style.scss
@@ -173,6 +173,7 @@ footer {
 			margin-bottom: 0.25rem;
 			border-radius: 0.25rem;
 			padding: 0.5rem;
+			white-space: pre-wrap;
 		}
 	}
 }
